# hm-retrieval-two-tower

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
pkg/etl/: runner.py  transformations.py
pkg/modelling/: optimizer_factory.py  runner.py  tfrecord_dataset.py
pkg/modelling/indices/: brute_force.py  static_index.py
pkg/modelling/layers/: input_layer.py  logq_correction.py
pkg/modelling/metrics/: index_recall.py
pkg/modelling/models/: abstract_keras_model.py  tower.py  two_tower_model.py
pkg/schema/: features.py  model_config.py  schema.py  training_config.py
pkg/tfrecord_writer/: runner.py  tfrecord_writer.py
pkg/utils/: settings.py
tests/: test_indices.py  test_layers.py  test_recall.py  test_transformations.py
